--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -690,7 +690,7 @@ body {
 .faq-answer ul {
   margin: 15px 0;
   padding-left: 20px;
-  list-style-type: none; /* Punkte/Symbole ausblenden */
+  list-style-type: none; 
 }
 
 .faq-answer li {
@@ -764,4 +764,9 @@ body {
   background: rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+/* === Favorites === */
+.form-group {
+  
 }
